Changes file for Date-Holidays

1.00 2014-09-21 Major release, update recommended

- You can now overwrite calendars with a local file, see issue
  #6 
 
  https://github.com/jonasbn/Date-Holidays/issues/6

- Use of Error has been removed

- Use of UNIVERSAL's can had been changed to more contemporary 
  pattern

- Adapter strategy has also been changed so adapters have precedence
  over adapted implementations


0.22 2014-09-15 bug fix release update not required
 
- Addressing issue #7
 
  https://github.com/jonasbn/Date-Holidays/issues/7
 
  This is bug in the tests suite generating reports on failures from
  CPAN testers.

0.21 2014.08.30 bug fix/feature release, update recommended

- Added adapter for:
    Date::Holidays::GB addressing Github issue #4

    Date::Holidays::GB exposes new parameter: regions, for local countries under GB.
    See: Date::Holidays::GB

- Fixed bug in countries parameter handling


0.20 2014.08.30 bug fix/feature release, update recommended

- Fixed bug in Date::Holidays::Adapter::FR, which wrongfully reported
  lack of implementation of is_holidays method when it was the holidays
  method - error being thrown upon call to holidays methods

- Added adapters for:
    Date::Holidays::CN
    Date::Holidays::KR
    Date::Holidays::PL

  Addressing Github issue #5

- First shot at improvement of Date::Holidays::Adapter code, this needs
  more work

- Improvements to the test suite, this also needs additional work

- Introducing use of Scalar::Util


0.19 2014.08.27 bug fix release, update not required (see below)

- This release addressed reports on failing tests for perl 5.21
  The use in this distribution of UNIVERSAL is now deprecated,
  see: Github issue [#3] and [RT:98337]


0.18 2014.08.24 feature release, update not required

- Added adapter class for Date::Holidays::BR [RT:63437]


0.17 2014.08.22 maintenance release, update not required

- Migrated from Module::Build to Dist::Zilla
