@@ -35,7 +35,6 @@ Locale::Country = 0
 Carp            = 0
 DateTime        = 0
 Module::Load    = 0
-Error           = 0
 Test::More      = 0
 perl            = 5.006
 Scalar::Util    = 0
